daemonset.yml
kind: DaemonSet
apiVersion: apps/v1
metadata:
    name: traefik
    namespace: traefik
spec:
    selector:
        matchLabels:
            name: traefik
    template:
        metadata:
            labels:
                name: traefik
        spec:
            serviceAccountName: traefik
            terminationGracePeriodSeconds: 60
            containers:
                - image: traefik:v2.3
                  name: traefik-ingress
                  ports:
                    - name: web
                      containerPort: 80
                      hostPort: 80
                    - name: websecure
                      containerPort: 443
                      hostPort: 443
                  securityContext:
                    capabilities:
                        drop:
                          - ALL
                        add:
                          - NET_BIND_SERVICE
                  args:
                    - --accesslog=true
                    - --api.dashboard
                    - --entryPoints.web.address=:80
                    - --entryPoints.websecure.address=:443
                    - --log.level=info
                    - --providers.kubernetescrd
                    - --providers.kubernetesingress
