hello-kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: traefik
spec:
  selector:
    matchLabels:
      name: hello-world
  replicas: 1
  template:
    metadata:
      labels:
        name: hello-world
    spec:
      containers:
        - name: hello-world
          image: gcr.io/google-samples/node-hello:1.0
          ports:
            - containerPort: 8080
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
    name: hello-world
    namespace: traefik
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
    selector:
        name: hello-world
